# CEMENTO-rust

./: .gitignore  Cargo.toml  README.md  sample.drawio  test.xml
src/: get_diagram_graph.rs  main.rs
src/draw_io/: diagram_draw.rs  diagram_read.rs  draw.rs  mod.rs  read.rs  types.rs
src/templates/: mod.rs
templates/: circle.xml
